add responsive design

--- a/Stats-preview-card-component/index.html
+++ b/Stats-preview-card-component/index.html
@@ -10,18 +10,6 @@
   <link rel="stylesheet" href="style.css">
 
   <title>Frontend Mentor | Stats preview card component</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution {
-      font-size: 11px;
-      text-align: center;
-    }
-
-    .attribution a {
-      color: hsl(228, 45%, 44%);
-    }
-  </style>
 </head>
 
 <body>
@@ -30,15 +18,14 @@
       <div class="card">
         <div class="context">
           <h1> Get <span class="accent">insights</span> that help your business grow. </h1>
-          <p> Discover the benefits of data analytics and make better decisions regarding revenue, customerexperience,
+          <p> Discover the benefits of data analytics and make better decisions regarding revenue, customer experience,
             and overall efficiency.</p>
         </div>
         <div class="stats-container">
-          <div class="stats"> <span class="num">10k+</span> </br>companies</div>
-          <div class="stats"><span class="num">314</span> </br>templates</div>
-          <div class="stats"><span class="num"> 12m+</span> </br>queries </div>
+          <p class="stats"> <span class="num num2">10k+</span> </br>companies</p>
+          <p class="stats"><span class="num">314</span> </br>templates</p>
+          <p class="stats"><span class="num"> 12m+</span> </br>queries </p>
         </div>
-
       </div>
       <div class="pic">
       </div>
