--- a/3-column-preview-card-component/index.html
+++ b/3-column-preview-card-component/index.html
@@ -12,24 +12,13 @@
 
   <title>Frontend Mentor | 3-column preview card component</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution {
-      font-size: 11px;
-      text-align: center;
-    }
-
-    .attribution a {
-      color: hsl(228, 45%, 44%);
-    }
-  </style>
 </head>
 
 <body>
 
   <div class="container">
     <div class="card card1">
-      <img src="images/icon-sedans.svg">
+      <img src="images/icon-sedans.svg" alt="sedans">
       <h1> Sedans </h1>
       <p> Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city
         or on your next road trip. </p>
@@ -38,7 +27,7 @@
 
 
     <div class="card card2">
-      <img src="images/icon-suvs.svg">
+      <img src="images/icon-suvs.svg" alt="suvs">
       <h1> SUVs </h1>
       <p> Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation
         and off-road adventures.</p>
@@ -47,7 +36,7 @@
 
 
     <div class="card card3">
-      <img src="images/icon-luxury.svg">
+      <img src="images/icon-luxury.svg" alt="luxury">
       <h1> Luxury </h1>
       <p> Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury
         rental and arrive in style. </p>
@@ -55,9 +44,6 @@
     </div>
   </div>
 
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="#">Moksha</div>
 </body>
 
 </html>
