fix landmark issues

--- a/3-column-preview-card-component/index.html
+++ b/3-column-preview-card-component/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-
+<main>
   <div class="container">
     <div class="card card1">
       <img src="images/icon-sedans.svg" alt="sedans">
@@ -43,7 +43,7 @@
       <button> Learn More </button>
     </div>
   </div>
-
+</main>
 </body>
 
 </html>
